tests/typing/fail/clock-03.stderr
error: proc macro panicked
 --> tests/typing/fail/clock-03.rs:3:1
  |
3 | / sync! {
4 | |     #![pass(1)]
5 | |
6 | |     node oui() = ()
7 | |     where
8 | |         a : float = 3.0 whennot c;
9 | | }
  | |_^
  |
  = help: message: not yet implemented: raise error: undefined variable c
